--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,24 +1,35 @@
 name: Testing
+
 on: [push]
+
 jobs:
   run-tests:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: ['16.11.1']
+        node-version: ['16.x']
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
+        id: setup-node
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
           cache-dependency-path: '**/package-lock.json'
       - name: Echo debug information
+        env:
+          STEPS_CONTEXT: ${{ toJSON(steps) }}
         run: |
-          node --version
-          npm --version
+          pwd
+          echo "==================================="
+          ls -la
+          echo "==================================="
+          echo "Node version: $(node --version)"
+          echo "==================================="
+          echo "Npm version: $(npm --version)"
+          echo "==================================="
           env
       - name: Install dependencies
         run: npm ci
