--- a/package.json
+++ b/package.json
@@ -24,25 +24,25 @@
     "@microsoft/api-extractor": "^7.18.19",
     "@rollup/plugin-alias": "^3.1.8",
     "@types/fs-extra": "^9.0.13",
-    "@types/jest": "^27.0.2",
-    "@types/node": "^16.11.7",
-    "@types/yargs": "^17.0.5",
-    "@typescript-eslint/eslint-plugin": "^5.3.1",
-    "@typescript-eslint/parser": "^5.3.1",
-    "esbuild": "^0.13.13",
-    "esbuild-node-loader": "^0.6.2",
+    "@types/jest": "^27.0.3",
+    "@types/node": "^16.11.8",
+    "@types/yargs": "^17.0.7",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "esbuild": "^0.13.14",
+    "esbuild-node-loader": "^0.6.3",
     "eslint": "^8.2.0",
-    "execa": "^5.1.1",
+    "execa": "^6.0.0",
     "fs-extra": "^10.0.0",
     "husky": "^7.0.4",
     "jest": "^27.3.1",
     "prettier": "^2.4.1",
     "rollup": "^2.60.0",
-    "rollup-plugin-esbuild": "^4.6.0",
-    "rollup-plugin-typescript2": "^0.30.0",
+    "rollup-plugin-esbuild": "^4.7.1",
+    "rollup-plugin-typescript2": "^0.31.0",
     "ts-jest": "^27.0.7",
-    "tsd": "^0.18.0",
-    "typescript": "^4.4.4",
+    "tsd": "^0.19.0",
+    "typescript": "4.4.4",
     "vue": "3.2.21",
     "yargs": "^17.2.1"
   }
