--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
   "editor.codeActionsOnSave": {
     "source.fixAll": true
   },
-  "volar.preferredTagNameCase": "pascal",
-  "typescript.tsdk": "node_modules\\typescript\\lib"
+  "volar.completion.preferredTagNameCase": "pascal",
+  "typescript.tsdk": "node_modules\\typescript\\lib",
+  "cSpell.words": ["esbuild", "execa"]
 }
