--- a/package.json
+++ b/package.json
@@ -21,11 +21,10 @@
     "directory": "test-dts"
   },
   "dependencies": {
-    "@microsoft/api-extractor": "^7.18.19",
     "@rollup/plugin-alias": "^3.1.8",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27.0.3",
-    "@types/node": "^16.11.9",
+    "@types/node": "^16.11.10",
     "@types/yargs": "^17.0.7",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
@@ -36,14 +35,14 @@
     "fs-extra": "^10.0.0",
     "husky": "^7.0.4",
     "jest": "^27.3.1",
-    "prettier": "^2.4.1",
+    "prettier": "^2.5.0",
     "rollup": "^2.60.1",
-    "rollup-plugin-esbuild": "^4.7.2",
-    "rollup-plugin-typescript2": "^0.31.0",
+    "rollup-plugin-dts": "^4.0.1",
+    "rollup-plugin-typescript2": "^0.31.1",
     "ts-jest": "^27.0.7",
     "tsd": "^0.19.0",
-    "typescript": "4.4.4",
-    "vue": "3.2.21",
+    "typescript": "4.5.2",
+    "vue": "3.2.23",
     "yargs": "^17.2.1"
   }
 }
