--- a/packages/examples/tsconfig.json
+++ b/packages/examples/tsconfig.json
@@ -16,10 +16,11 @@
     }
   },
   "include": [
+    "env.d.ts",
     "src/**/*.ts",
     "src/**/*.d.ts",
     "src/**/*.tsx",
     "src/**/*.vue",
-    "vite.config.ts"
+    "vite.config.*"
   ]
 }
