--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -19,7 +19,7 @@
     "tailwindcss": "2.2.19",
     "typescript": "4.5.2",
     "vite": "^2.6.14",
-    "vue": "3.2.23'",
+    "vue": "3.2.23",
     "vue-router": "^4.0.11",
     "vue-tsc": "^0.29.6",
     "vue3-form-validation": "5.0.7"
