--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -9,19 +9,18 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@heroicons/vue": "1.0.5",
-    "@tailwindcss/forms": "0.3.4",
+    "@heroicons/vue": "^1.0.5",
+    "@tailwindcss/forms": "^0.4.0",
     "@vitejs/plugin-vue": "^1.10.2",
     "@vue/compiler-sfc": "3.2.24",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.4",
-    "postcss-nesting": "^10.0.2",
-    "tailwindcss": "2.2.19",
-    "typescript": "4.5.2",
+    "tailwindcss": "^3.0.0",
+    "typescript": "4.5.3",
     "vite": "^2.7.1",
     "vue": "3.2.24",
     "vue-router": "^4.0.11",
     "vue-tsc": "^0.29.8",
-    "vue3-form-validation": "5.0.10"
+    "vue3-form-validation": "5.1.0"
   }
 }
