--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,13 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "baseUrl": ".",
+    "rootDir": ".",
+    "paths": {
+      "@/*": ["packages/*/src"]
+    }
   },
-  "include": ["packages/vue3-form-validation/src"],
-  "exclude": ["**/dist", "**/publish", "**/__tests__", "**/__mocks__"]
+  "include": ["packages/*/src", "packages/*/__tests__", "test-dts"],
+  "exclude": ["**/dist", "**/publish", "packages/examples"]
 }
