Add `js` file ending to lint command

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "node --experimental-loader esbuild-node-loader scripts/build.ts",
     "dev": "node --experimental-loader esbuild-node-loader scripts/dev.ts --targets shared vue3-form-validation",
     "examples": "npm run dev --workspace=examples",
-    "docs": "npm run dev --workspace=docs",
-    "lint": "npm exec -- eslint --rule=\"no-console: [\"error\", { allow: [\"warn\", \"error\"] }]\" --max-warnings 0 --fix-dry-run ./packages/*/src/**/*.ts",
+    "lint": "npm exec -- eslint --rule=\"no-console: [\"error\", { allow: [\"warn\", \"error\"] }]\" --max-warnings 0 --fix-dry-run ./packages/*/src/**/*.{ts,js}",
     "test": "jest --runInBand",
     "test-dts": "npm run build && npm exec -- tsd",
     "test-dts-only": "npm exec -- tsd",
