Improve example application and fix comments on functions in `Form`

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,5 @@
   },
   "volar.completion.preferredTagNameCase": "pascal",
   "typescript.tsdk": "node_modules\\typescript\\lib",
-  "cSpell.words": ["esbuild", "execa", "vite"]
+  "cSpell.words": ["esbuild", "execa", "vite", "postcss"]
 }
