--- a/package.json
+++ b/package.json
@@ -35,13 +35,13 @@
     "husky": "^7.0.4",
     "jest": "^27.4.4",
     "prettier": "^2.5.1",
-    "rollup": "^2.61.0",
+    "rollup": "^2.61.1",
     "rollup-plugin-dts": "^4.0.1",
     "rollup-plugin-typescript2": "^0.31.1",
     "ts-jest": "^27.1.1",
     "tsd": "^0.19.0",
-    "typescript": "4.5.3",
-    "vue": "3.2.24",
+    "typescript": "^4.5.3",
+    "vue": "^3.2.26",
     "yargs": "^17.3.0"
   }
 }
