--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -11,14 +11,14 @@
   "dependencies": {
     "@heroicons/vue": "^1.0.5",
     "@tailwindcss/forms": "^0.4.0",
-    "@vitejs/plugin-vue": "^1.10.2",
-    "@vue/compiler-sfc": "3.2.24",
+    "@vitejs/plugin-vue": "^2.0.0",
+    "@vue/compiler-sfc": "3.2.26",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.4",
-    "tailwindcss": "^3.0.0",
+    "tailwindcss": "^3.0.1",
     "typescript": "4.5.3",
     "vite": "^2.7.1",
-    "vue": "3.2.24",
+    "vue": "^3.2.26",
     "vue-router": "^4.0.11",
     "vue-tsc": "^0.29.8",
     "vue3-form-validation": "5.1.0"
