--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
   "private": true,
-  "workspaces": [
-    "./packages/*"
-  ],
   "type": "module",
   "scripts": {
     "build": "node --experimental-loader esbuild-node-loader scripts/build.ts",
@@ -20,28 +17,26 @@
     "directory": "test-dts"
   },
   "dependencies": {
-    "@rollup/plugin-alias": "^3.1.8",
-    "@types/fs-extra": "^9.0.13",
-    "@types/jest": "^27.0.3",
-    "@types/node": "^16.11.13",
-    "@types/yargs": "^17.0.7",
-    "@typescript-eslint/eslint-plugin": "^5.7.0",
-    "@typescript-eslint/parser": "^5.7.0",
-    "esbuild": "^0.14.5",
-    "esbuild-node-loader": "^0.6.3",
-    "eslint": "^8.4.1",
-    "execa": "^6.0.0",
-    "fs-extra": "^10.0.0",
-    "husky": "^7.0.4",
-    "jest": "^27.4.5",
-    "prettier": "^2.5.1",
-    "rollup": "^2.61.1",
-    "rollup-plugin-dts": "^4.0.1",
-    "rollup-plugin-typescript2": "^0.31.1",
-    "ts-jest": "^27.1.1",
-    "tsd": "^0.19.0",
-    "typescript": "^4.5.4",
-    "vue": "^3.2.26",
-    "yargs": "^17.3.0"
+    "@rollup/plugin-alias": "3.1.8",
+    "@types/fs-extra": "9.0.13",
+    "@types/jest": "27.0.3",
+    "@types/node": "17.0.0",
+    "@types/yargs": "17.0.7",
+    "@typescript-eslint/eslint-plugin": "5.7.0",
+    "@typescript-eslint/parser": "5.7.0",
+    "esbuild-node-loader": "0.6.3",
+    "eslint": "8.5.0",
+    "execa": "6.0.0",
+    "fs-extra": "10.0.0",
+    "husky": "7.0.4",
+    "jest": "27.4.5",
+    "prettier": "2.5.1",
+    "rollup": "2.61.1",
+    "rollup-plugin-dts": "4.0.1",
+    "rollup-plugin-typescript2": "0.31.1",
+    "ts-jest": "27.1.2",
+    "tsd": "0.19.0",
+    "yargs": "17.3.0",
+    "typescript": "4.5.4"
   }
 }
