--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -9,18 +9,18 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@heroicons/vue": "^1.0.5",
-    "@tailwindcss/forms": "^0.4.0",
-    "@vitejs/plugin-vue": "^2.0.1",
+    "@heroicons/vue": "1.0.5",
+    "@tailwindcss/forms": "0.4.0",
+    "@vitejs/plugin-vue": "2.0.1",
     "@vue/compiler-sfc": "3.2.26",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.5",
+    "autoprefixer": "10.4.0",
+    "postcss": "8.4.5",
+    "tailwindcss": "3.0.7",
     "typescript": "4.5.4",
-    "vite": "^2.7.2",
-    "vue": "^3.2.26",
-    "vue-router": "^4.0.11",
-    "vue-tsc": "^0.29.8",
+    "vite": "2.7.3",
+    "vue": "3.2.26",
+    "vue-router": "4.0.11",
+    "vue-tsc": "0.29.8",
     "vue3-form-validation": "5.1.0"
   }
 }
