--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
   "private": true,
+  "workspaces": [
+    "./packages/*"
+  ],
   "type": "module",
   "scripts": {
     "build": "node --experimental-loader esbuild-node-loader scripts/build.ts",
-    "dev": "node --experimental-loader esbuild-node-loader scripts/dev.ts --targets shared vue3-form-validation",
-    "examples": "npm run dev --workspace=examples",
+    "dev": "node --experimental-loader esbuild-node-loader scripts/dev.ts --targets shared",
+    "vue3": "npm run dev --workspace=vue3-examples",
     "lint": "npm exec -- eslint --rule=\"no-console: [\"error\", { allow: [\"warn\", \"error\"] }]\" --max-warnings 0 --fix-dry-run \"./packages/*/src/**/*.{ts,js}\"",
-    "test": "jest --runInBand",
+    "test:2": "vue-demi-switch 2 vue2 && jest --runInBand",
+    "test:3": "vue-demi-switch 3 && jest --runInBand",
     "test-dts": "npm run build && npm exec -- tsd",
     "test-dts-only": "npm exec -- tsd",
     "test-all": "npm run test-dts && npm test",
     "postinstall": "husky install"
   },
-  "types": "publish/dist/vue3-form-validation.d.ts",
+  "types": "publish/dist/compose-validation.d.ts",
   "tsd": {
     "directory": "test-dts"
   },
@@ -24,6 +28,7 @@
     "@types/yargs": "17.0.7",
     "@typescript-eslint/eslint-plugin": "5.7.0",
     "@typescript-eslint/parser": "5.7.0",
+    "@vue/composition-api": "1.4.2",
     "esbuild-node-loader": "0.6.3",
     "eslint": "8.5.0",
     "execa": "6.0.0",
@@ -37,6 +42,9 @@
     "ts-jest": "27.1.2",
     "tsd": "0.19.0",
     "yargs": "17.3.0",
-    "typescript": "4.5.4"
+    "typescript": "4.5.4",
+    "vue2": "npm:vue@2",
+    "vue": "3.2.26",
+    "vue-demi": "latest"
   }
 }
