--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
-  "name": "shared",
+  "version": "5.1.0",
+  "name": "@compose-validation/shared",
   "type": "module",
   "sideEffects": false,
   "types": "dist/shared.d.ts",
@@ -9,5 +10,14 @@
   },
   "dependencies": {
     "vue-demi": "latest"
+  },
+  "peerDependencies": {
+    "vue": "2.x || 3.x",
+    "@vue/composition-api": "^1.4.2"
+  },
+  "peerDependenciesMeta": {
+    "@vue/composition-api": {
+      "optional": true
+    }
   }
 }
